2011-05-07  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (NO_GETCONTEXT): Add missing ')'.

2011-05-07  Ivan Maidanski  <ivmai@mail.ru> (really Thorsten Glaser)

	* include/private/gcconfig.h (NO_GETCONTEXT): Do not use
	getcontext(2) on m68k because it is not implemented there.

2011-05-07  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_clear_a_few_frames): Use BZERO().
	* mark_rts.c (GC_clear_roots, GC_rebuild_root_index): Ditto.
	* reclaim.c (GC_start_reclaim): Ditto.
	* blacklst.c (total_stack_black_listed): Remove "len" local
	variable.
	* dbg_mlc.c (GC_generate_random_valid_address): Replace "for"
	statement with "do-while" one.
	* dyn_load.c (GC_register_dynamic_libraries,
	GC_register_dynlib_callback): Remove redundant parentheses.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* cord/cordxtra.c (CORD_from_file_lazy_inner): Suppress
	"unused result" compiler warning for fread().
	* cord/cordxtra.c: Expand all tabs to spaces.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_write_fault_handler): Break when in_allocd_block
	is set to true.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_has_other_debug_info): Change return type to int;
	return -1 if the object has (or had) debugging info but was
	marked deallocated.
	* include/private/dbg_mlc.h (GC_has_other_debug_info): Ditto.
	* dbg_mlc.c (GC_has_other_debug_info): Update documentation;
	remove "ohdr" local variable.
	* dbg_mlc.c (GC_debug_free): Don't call GC_free if the object has
	probably been deallocated.
	* dbg_mlc.c (GC_debug_free): Don't actually free the object even
	in the leak-finding mode if GC_findleak_delay_free.
	* dbg_mlc.c (GC_print_all_smashed_proc): Print a trailing blank
	line.
	* dbg_mlc.c (GC_check_leaked): New function (only unless
	SHORT_DBG_HDRS).
	* doc/README.environment (GC_FINDLEAK_DELAY_FREE): Document.
	* doc/README.macros (GC_FINDLEAK_DELAY_FREE): Ditto.
	* include/private/dbg_mlc.h (START_FLAG, END_FLAG): Use GC_WORD_C